--- a/base/templates/base/stocks.html
+++ b/base/templates/base/stocks.html
@@ -12,16 +12,16 @@
 <div>
     <br>
 
-    <div class="stocks-container">
-        <div><h3>&nbsp;&nbsp;Company Name</h3></div>
-        <div><h3>Symbol</h3></div>
-        <div style='text-align:right'><h3 >Last Price</h3></div>
-        <div style='text-align:right'><h3>Open Price</h3></div>
-        <div style='text-align:right'><h3>Close Price</h3></div>
-        <div style='text-align:right'><h3>High Price</h3></div>
-        <div style='text-align:right'><h3>Low Price</h3></div>
-        <div style='text-align:right'><h3>Volume&nbsp;&nbsp;</h3></div>
-        <div style='text-align:right'><h3>&nbsp;</h3></div>
+    <div class="stocks-container" style = "font-size: 22px; font-weight: bold;">
+        <div><p>&nbsp;&nbsp;Company Name</p></div>
+        <div><p>Symbol</p></div>
+        <div style='text-align:right'><p>Last Price</p></div>
+        <div style='text-align:right'><p>Open Price</p></div>
+        <div style='text-align:right'><p>Close Price</p></div>
+        <div style='text-align:right'><p>High Price</p></div>
+        <div style='text-align:right'><p>Low Price</p></div>
+        <div style='text-align:right'><p>Volume&nbsp;&nbsp;</p></div>
+        <div style='text-align:right'><p>&nbsp;</p></div>
 
     </div>
 
